Added logos and details for the app

--- a/code/v1/BehindFood/package.json
+++ b/code/v1/BehindFood/package.json
@@ -23,9 +23,9 @@
       "cordova-plugin-whitelist": {}
     },
     "platforms": [
+      "osx",
       "ios",
-      "android",
-      "osx"
+      "android"
     ]
   }
 }
