--- a/code/v1/BehindFood/package.json
+++ b/code/v1/BehindFood/package.json
@@ -16,16 +16,22 @@
     "cordova-android": "^9.1.0",
     "cordova-ios": "^6.2.0",
     "cordova-osx": "^6.0.0",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-whitelist": "^1.3.5"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "com.moust.cordova.videoplayer": {},
+      "cordova-plugin-dialogs": {}
     },
     "platforms": [
       "osx",
       "ios",
       "android"
     ]
+  },
+  "dependencies": {
+    "cordova-plugin-video-player": "^1.0.1"
   }
 }
